<resources>
    <string name="app_name">王桢</string>
    <string name="action_settings">提交作业</string>
    <string name="hello">王桢 21732091</string>
    <string name="item_calculator">计算器</string>
    <string name="item_status">发动态</string>
    <string name="one">1</string>

    <string name="title_activity_status">StatusActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="send_status">发动态</string>
    <string name="cancel">取消</string>
    <string name="author_info">王桢 21732091</string>
    <string name="send">发送</string>
    <string name="share_status">分享新鲜事...</string>
    <string name="package_info"><![CDATA[Successfully posted: 27 chars By<cn.zju.id21732091.wangzhen>]]></string>
    <string name="get_files_dir">GET FILES DIR</string>
    <string name="get_external_storage_directory">GET EXTERNAL STORAGE DIR</string>
    <string name="get_external_files_dir">GET EXETERNAL FILES DIR</string>
    <string name="file_storage">文件测试</string>
    <string name="pause_submit">已暂停提交功能</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="username">用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="password">密码</string>
    <string name="refresh_period_second">微博刷新周期</string>
    <string name="refresh_period">刷新周期</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">选项设置</string>
    <string name="start_service">启动服务</string>
    <string name="stop_service">停止服务</string>
    <string name="music_list">本地音乐</string>
    <string name="author">王桢</string>
    <string name="student_id">21732091</string>
    <string name="delete_data">清除缓存数据</string>
    <string name="play_music">音乐播放</string>
</resources>
