<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.zju.id21732091.wangzhen.activity.MainActivity">

    <item
        android:id="@+id/action_add_status"
        android:orderInCategory="10"
        android:title=""
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_start_service"
        android:orderInCategory="0"
        android:checkable="true"
        android:title="@string/start_service"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="1"
        android:title="@string/delete_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calculator"
        android:orderInCategory="2"
        android:title="@string/item_calculator"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_status"
        android:orderInCategory="3"
        android:title="@string/item_status"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_file_storage"
        android:orderInCategory="4"
        android:title="@string/file_storage"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_music_list"
        android:orderInCategory="5"
        android:title="@string/music_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="6"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_submit"
        android:orderInCategory="7"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
